foolish/foolish-core/src/snapshots/foolish_core__approval_tests__alarm_division_by_zero_deeply_nested.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 RHKLWO2N4vJKkrPc1P7EfzVRdDsgpEjeosr/v4lav5DJvy70kkwZ0JjjC5tPgGNXcqdFxBuYF1SAmqfYQDwDCw==
INPUT: {l1 = {l2 = {l3 = {bad = 1 / 0; good = 42};};};}
[0] PARSED:
Brane [EMBRYONIC]
  l1 = 
  Brane [EMBRYONIC]
    l2 = 
    Brane [EMBRYONIC]
      l3 = 
      Brane [EMBRYONIC]
        bad = 
        Operator(/) [EMBRYONIC]
          Int(1) [INDEPENDENT]
          Int(0) [INDEPENDENT]
        good = 
        Int(42) [INDEPENDENT]
RESULT:
Brane [NK]
  l1 = 
  Brane [NK]
    l2 = 
    Brane [NK]
      l3 = 
      Brane [NK]
        bad = 
        ??? (division by zero) [NK]
        good = 
        Int(42) [INDEPENDENT]
