foolish/foolish-core/src/snapshots/foolish_core__approval_tests__alarm_multiple_divisions_by_zero.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 30SzlehuaOyCbn1ZoCm8YK1YWrTEkQFK0gGbCXu6o8zoxQIMe8Ql5oHr3Xn1wZHWkLu0TRoFU4tiSR3BGh0lAg==
INPUT: {a = 1 / 0; b = 2 / 0; c = 3 / 0;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Operator(/) [EMBRYONIC]
    Int(1) [INDEPENDENT]
    Int(0) [INDEPENDENT]
  b = 
  Operator(/) [EMBRYONIC]
    Int(2) [INDEPENDENT]
    Int(0) [INDEPENDENT]
  c = 
  Operator(/) [EMBRYONIC]
    Int(3) [INDEPENDENT]
    Int(0) [INDEPENDENT]
RESULT:
Brane [NK]
  a = 
  ??? (division by zero) [NK]
  b = 
  ??? (division by zero) [NK]
  c = 
  ??? (division by zero) [NK]
