foolish/foolish-core/src/snapshots/foolish_core__approval_tests__alarm_nested_division_by_zero.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {outer = {inner = 5 / 0};}
[0] PARSED:
Brane [EMBRYONIC]
  outer = 
  Brane [EMBRYONIC]
    inner = 
    Operator(/) [EMBRYONIC]
      Int(5) [INDEPENDENT]
      Int(0) [INDEPENDENT]
RESULT:
Brane [NK]
  outer = 
  Brane [NK]
    inner = 
    ??? (division by zero) [NK]
