foolish/foolish-core/src/snapshots/foolish_core__approval_tests__alarm_unknown_literal_no_alarm.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {x = ???; y = 42;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  ??? (??? literal) [NK]
  y = 
  Int(42) [INDEPENDENT]
RESULT:
Brane [NK]
  x = 
  ??? (??? literal) [NK]
  y = 
  Int(42) [INDEPENDENT]
