foolish/foolish-core/src/snapshots/foolish_core__approval_tests__anchoredSearchFailsOnConstant.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 W6BLRdKjuzXPsHavRsF8H9gxInTRU7k7ey6xALnO+v6JixDCMBKTuEh9ei7wz6CpvDZylAwfm1B7b6MX92KWCg==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    α = 
    Int(100) [INDEPENDENT]
    β = 
    Int(200) [INDEPENDENT]
  notFound = 
  Search(pattern='γ', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  emptyBrane = 
  Brane [EMBRYONIC]
  emptyHead = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  emptyTail = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  b = 
  Brane [CONSTANT]
    α = 
    Int(100) [INDEPENDENT]
    β = 
    Int(200) [INDEPENDENT]
  notFound = 
  Search(pattern='γ', dir=BACKWARD, ANCHORED) [NK]
  emptyBrane = 
  Brane [CONSTANT]
  emptyHead = 
  HeadTail(HEAD, ANCHORED) [NK]
  emptyTail = 
  HeadTail(TAIL, ANCHORED) [NK]
