foolish/foolish-core/src/snapshots/foolish_core__approval_tests__anchoredSearchOnConstant.snap
---
source: foolish-core/src/lib.rs
assertion_line: 50
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    α = 
    Int(100) [INDEPENDENT]
    β = 
    Int(200) [INDEPENDENT]
  head = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  tail = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
  found = 
  Search(pattern='α', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    α = 
    Int(100) [INDEPENDENT]
    β = 
    Int(200) [INDEPENDENT]
  head = 
  Int(100) [INDEPENDENT]
  tail = 
  Int(200) [INDEPENDENT]
  found = 
  Int(100) [INDEPENDENT]
