foolish/foolish-core/src/snapshots/foolish_core__approval_tests__anchored_search_on_constanic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 2ZHL0aFhKtBpO+hDaR7FiCXbUs2XzaXnMkoYqLflPtshQjX1VLj/HEFpyKpt9w1CzcnL2dE6wVfY1/XNuir2Dw==
INPUT: {emptyBrane = {}; chained = emptyBrane^;}
[0] PARSED:
Brane [EMBRYONIC]
  emptyBrane = 
  Brane [EMBRYONIC]
  chained = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  emptyBrane = 
  Brane [CONSTANT]
  chained = 
  HeadTail(HEAD, ANCHORED) [NK]
